welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: type mismatch;
 found   : Int
 required: String
				ecritMessage(cpt:String)
                                             ^ColumnByColumn:18: error: type mismatch;
 found   : Int
 required: String
				ecritMessage(cpt:String)
                                             ^